--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ release/BossModReborn/BossModReborn.dll
 release/BossModReborn/BossModReborn.json
 release/BossModReborn/BossModReborn.pdb
 release/BossModReborn/DefaultRotationPresets.json
+FFXIVClientStructs
